# cross_platform_c11

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  TRIAGE_POLICY.md  ghostty.h
.claude/: settings.json
.github/: dependabot.yml
.lattice/: config.json  ids.json
CLI/: c11.swift
GhosttyTabs.xcodeproj/: project.pbxproj
Resources/: Info.plist  Localizable.xcstrings  welcome.md
Sources/: AgentChip.swift  AgentDetector.swift  AgentRestartRegistry.swift  AgentSkillsView.swift  AppDelegate.swift  BrandColors.swift  BrowserWindowPortal.swift  ContentView.swift  CreateWorkspaceSheet.swift  DefaultAgentConfig.swift  DefaultAgentProjectConfig.swift  DefaultAgentResolver.swift  DefaultAgentSettingsView.swift  GhosttyTerminalView.swift  LaunchResumePicker.swift  PersistedMetadata.swift  SessionPersistence.swift  SkillInstaller.swift  SocketControlSettings.swift  SurfaceMetadataStore.swift  TabManager.swift  TerminalController.swift  TerminalWindowPortal.swift  TextBoxInput.swift  Workspace.swift  WorkspaceLayoutExecutor.swift  WorkspacePlanCapture.swift  c11App.swift
c11-qt/: CMakeLists.txt
c11-qt/.github/workflows/: build.yml
c11-qt/cli/: c11cli.cpp
c11-qt/cmake/: GhosttyIntegration.cmake  PlatformConfig.cmake  QtSetup.cmake
c11-qt/packaging/linux/: build-appimage.sh  build-deb.sh  c11.appdata.xml  c11.desktop
c11-qt/packaging/macos/: Info.plist
c11-qt/packaging/windows/: build-installer.bat  installer.nsi
c11-qt/src/: main.cpp
c11-qt/src/agent/: AgentDetector.cpp  AgentDetector.h  SkillInstaller.cpp  SkillInstaller.h
c11-qt/src/app/: C11Application.cpp  C11Application.h
c11-qt/src/ghostty/: GhosttyConfig.cpp  GhosttyConfig.h  GhosttyGlContext.cpp  GhosttyGlContext.h  GhosttyKeyMapper.cpp  GhosttyKeyMapper.h  GhosttyNSViewBridge.h  GhosttyNSViewBridge.mm  GhosttyQtPlatform.h  GhosttyRuntime.cpp  GhosttyRuntime.h  GhosttyWidget.cpp  GhosttyWidget.h
c11-qt/src/i18n/: TranslationManager.cpp  TranslationManager.h
c11-qt/src/mailbox/: MailboxDispatcher.cpp  MailboxDispatcher.h  MailboxEnvelope.cpp  MailboxEnvelope.h
c11-qt/src/metadata/: GitContextResolver.cpp  GitContextResolver.h  PaneMetadataStore.cpp  PaneMetadataStore.h  SurfaceMetadataStore.cpp  SurfaceMetadataStore.h
c11-qt/src/panel/: BrowserPanel.cpp  BrowserPanel.h  MarkdownPanel.cpp  MarkdownPanel.h  Panel.cpp  Panel.h  TerminalPanel.cpp  TerminalPanel.h
c11-qt/src/platform/: PlatformAbstraction.cpp  PlatformAbstraction.h  platform_windows.cpp  platform_windows.h
c11-qt/src/session/: SessionPersistence.cpp  SessionPersistence.h
c11-qt/src/sidebar/: AgentChipWidget.cpp  AgentChipWidget.h  NotificationsWidget.cpp  NotificationsWidget.h  PortScanner.cpp  PortScanner.h  SidebarWidget.cpp  SidebarWidget.h
c11-qt/src/socket/: SocketCommandRouter.cpp  SocketCommandRouter.h  SocketProtocol.cpp  SocketProtocol.h  SocketServer.cpp  SocketServer.h
c11-qt/src/theme/: ThemeManager.cpp  ThemeManager.h
c11-qt/src/ui/: DragDropHandler.cpp  DragDropHandler.h  FindOverlay.cpp  FindOverlay.h  KeyboardShortcutSettings.cpp  KeyboardShortcutSettings.h  MainWindow.cpp  MainWindow.h  StatusBar.cpp  StatusBar.h
c11-qt/src/workspace/: PaneLayout.cpp  PaneLayout.h  PaneLayoutWidget.cpp  PaneLayoutWidget.h  Workspace.cpp  Workspace.h  WorkspaceManager.cpp  WorkspaceManager.h  WorkspaceStackWidget.cpp  WorkspaceStackWidget.h
c11-qt/tests/: CMakeLists.txt  ghostty_probe.c  tst_GhosttyConfig.cpp  tst_GhosttyGlContext.cpp  tst_GhosttyKeyMapper.cpp  tst_MailboxEnvelope.cpp  tst_MetadataStore.cpp  tst_PaneLayout.cpp  tst_Platform.cpp  tst_SessionPersistence.cpp  tst_SocketCommandRouter.cpp  tst_SocketProtocol.cpp  tst_StatusBar.cpp  tst_WorkspaceManager.cpp
c11-qt/tests/integration/: test_socket_api.py
c11Tests/: AIUsageTests.swift  AgentDetectorTests.swift  AgentRestartRegistryTests.swift  AppDelegateShortcutRoutingTests.swift  BrowserImportMappingTests.swift  BrowserPanelTests.swift  CLIHealthRuntimeTests.swift  CommandPaletteSearchEngineTests.swift  ConversationCrashRecoveryTests.swift  ConversationRefTests.swift  ConversationScraperTests.swift  ConversationSnapshotBridgeTests.swift  ConversationStoreFailureModeTests.swift  ConversationStrategyTests.swift  CwdParamResolutionTests.swift  DefaultAgentConfigTests.swift  DefaultAgentLaunchCompositionTests.swift  DefaultAgentResolverTests.swift  DescriptionSanitizerTests.swift  FullDiskAccessProbeTests.swift  GhosttyConfigTests.swift  GhosttyEnsureFocusWindowActivationTests.swift  GitContextResolverCacheWiringTests.swift  GitContextResolverTests.swift  MetadataDerivedPrecedenceTests.swift  NewWorkspaceTitleTests.swift  NotificationAndMenuBarTests.swift  PaneInteractionRuntimeTests.swift  PanelIdentityRestoreTests.swift  ProcessGitRunnerTimeoutTests.swift  ShutdownSentinelTests.swift  SidebarOrderingTests.swift  SocketControlPasswordStoreTests.swift  SocketControlSafetyTests.swift  SocketDerivedSourceRejectionTests.swift  StateDirectoryMigrationTests.swift  SurfaceActivityTests.swift  TabManagerUnitTests.swift  TerminalAndGhosttyTests.swift  TerminalControllerSocketSecurityTests.swift  (+9 more)
docs/: adding-a-new-agent.md  ai-usage-monitoring.md  c11-socket-unlink-diagnostic.md  c11-state-save-load-and-crash-resume.md  c11-tier1-persistence-plan.md  c11d-cloud-host-design.md  conversation-store-architecture.md  privacy-endpoints.md  security-threat-model.md  socket-api-reference.md  windows-cli-vs-skill-audit.md  windows-ui-target.md
notes/: build-test-pipeline-audit-2026-05-18.md  c11-1-recommendation-2026-05-06.md  c11-24-snapshot-capture-bug.md  c11-99-area-c-aar-2026-05-19.md  overnight-orchestration-plan-2026-05-06.md  overnight-retrospective-2026-05-06.md  phase6-research-memo.md  release-v0.49.0-prep.md
scripts/: bump-version.sh  c11-115-add-localizations.py  c11-14-add-localizations.py  c11-14-register-files.rb  ghosttykit-checksums.txt  reloads.sh  repro-c11-18.sh  sparkle_generate_appcast.sh  sync-installed-skills.sh  test-unit-local.sh  test-windows.sh
skills/: MANIFEST.json
tests_v2/: test_cli_background_terminal_helpers_start_pty.py  (+4 more)
(+515 files in other folders)
